@@ -1,6 +1,6 @@
 #name	C_behaviour	max_speed	acceleration
-Pippo 10 100 50
-Pluto 10 100 50
-Topolino 10 100 50
-Pietro 10 100 50
-Ugo 10 100 50
+1 10 100 50
+2 10 100 50
+3 10 100 50
+4 10 100 50
+5 10 100 50
